[workspace]

[package]
name = "servers"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.12.6"
prost-types = "0.12.6"
tungstenite = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15.0"
futures = "0.3"
futures-util = "0.3.17"
minifb ="0.27"
anyhow ="1"
lazy_static = "1.4"

[build-dependencies]
prost-build = "0.12.6"

[[bin]]
name = "game"
path = "src/main.rs"

